--- a/task2/Dockerfile
+++ b/task2/Dockerfile
@@ -1,3 +1,5 @@
+#FROM --platform=linux/amd64 python:3.8-slim
+
 FROM python:3.8-slim
 ADD ./requirements.txt /requirements.txt
 RUN pip install --no-cache-dir -U pip && pip install --no-cache-dir -r /requirements.txt
