--- a/task3/old/env.yaml
+++ b/task3/old/env.yaml
@@ -3,8 +3,8 @@ channels:
   - conda-forge
 dependencies:
   - python=3.8.5
-  - numpy=1.19.1
-  - scipy=1.5.1
+  - numpy=1.21.*
+  - scipy=1.7.*
   # - pyarmor=6.7.4
   - cryptography=3.0
   - scikit-learn==0.24.*
